--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
     --fundo-texto: #001E40;
     --borda: #0075FF;
     --roboto: 'Roboto', sans-serif;
-    --roboto-mono:
-'Roboto Mono', monospace;
+    --roboto-mono:'Roboto Mono', monospace;
 }
  
 *{  font-weight: 400;
